--- a/public/profile.html
+++ b/public/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Homepage</title>
+    <title>Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -15,21 +15,43 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    <a class="nav-link" href="/">Home</a>
                     <a class="nav-link" href="/events.html">Events</a>
-                    <a class="nav-link" href="/profile.html">Profile</a>
+                    <a class="nav-link active" aria-current="page" href="/profile.html">Profile</a>
                 </div>
             </div>
         </div>
     </nav>
 
     <div class="container-fluid">
-        <h1>Hello internet</h1>
+        <h1>Profile</h1>
 
-        <p>Just a homepage of our lovely project</p>
+        <form action="#">
+            <div class="mb-3">
+                <label for="walletAddress" class="form-label">Wallet Address</label>
+                <input type="text" class="form-control" id="walletAddress">
+            </div>
+
+            <button type="submit" class="btn btn-primary" onclick="setWalletId()">Set</button>
+        </form>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script>
+        function setWalletId() {
+            let walletAddress = $('#walletAddress').val()
+            localStorage.setItem('walletAddress', walletAddress)
+        }
+
+        $(document).ready(function () {
+            // fill wallet id
+            let walletAddress = localStorage.getItem('walletAddress')
+            if (walletAddress != null) {
+                $('#walletAddress').val(walletAddress)
+            }
+        })
+    </script>
 </body>
 </html>
